@startuml
title Context Compilation - Implemented Class View

left to right direction
skinparam classAttributeIconSize 0
skinparam shadowing false
skinparam backgroundColor #F7F4ED
skinparam defaultFontName Arial
skinparam ArrowColor #30343B

interface MastraProcessor

class ContextBudgetProcessor {
  -planner: StepContextPlanner
  -runState: ContextRunState
  +processInputStep(args): ProcessInputStepResult
}

class ProviderPromptGuardProcessor {
  -profileRegistry: ModelContextProfileRegistry
  -tokenCounter: PromptTokenCounter
  +processLLMRequest(args): ProcessLLMRequestResult
}

class ConversationTurnGrouper <<function>> {
  +groupMessagesByTurn(messages): ConversationTurnGroup[]
}

class ContextRunState {
  +identity: ContextRunIdentity
  +package: ContextPackage
  +plans: ContextPlan[]
  +merge(package): ContextPackage
  +registerObservation(package): ContextPackage
  +recordPlan(plan): void
}

class StepContextPlanner {
  -profileRegistry: ModelContextProfileRegistry
  -tokenCounter: PromptTokenCounter
  -strategyRegistry: ReductionStrategyRegistry
  -candidateSelector: ReductionCandidateSelector
  +plan(input): ContextPlan + PromptView
}

interface ContextReductionStrategy {
  +id: string
  +propose(state): ReductionProposal[]
}

interface ReductionCandidateSelector {
  +select(proposals, state): ReductionProposal
}

class ReductionStrategyRegistry {
  +register(strategy): void
  +propose(state): ReductionProposal[]
}

class OmitHistoricalGroupStrategy
class LowestQualityLossSelector
class PromptTokenCounter
class ModelContextProfileRegistry
class ContextPackageBuilder
class ContextOrchestrator
class ContextSourceRegistry
interface ToolResultAdapter
class SchemaContextAdapter
class SqlResultContextAdapter

class ContextPackage {
  +version: 2
  +packageId: string
  +revision: number
  +items: ContextItem[]
  +groups: ContextGroup[]
  +sourceSnapshots: ContextSourceSnapshot[]
  +artifactRefs: ArtifactRef[]
  +auditRefs: AuditRef[]
}

class ContextItem {
  +id: string
  +sourceType: string
  +sourceId: string
  +groupId: string
  +trust: ContextTrust
  +retention: ContextRetention
  +contentHash: string
}

class ContextGroup {
  +id: string
  +kind: ContextGroupKind
  +atomic: boolean
  +itemIds: string[]
}

class ContextPlan {
  +planId: string
  +stepNumber: number
  +packageRevision: number
  +selectedGroupIds: string[]
  +omittedGroupIds: string[]
  +decisions: ContextDecision[]
  +budget: GlobalContextBudget
}

class PromptView {
  +systemMessages: unknown[]
  +messages: MastraDBMessage[]
  +tokenReport: PromptTokenReport
}

ContextBudgetProcessor ..|> MastraProcessor
ProviderPromptGuardProcessor ..|> MastraProcessor
ContextBudgetProcessor --> ConversationTurnGrouper
ContextBudgetProcessor *--> ContextRunState
ContextBudgetProcessor *--> StepContextPlanner

StepContextPlanner --> ConversationTurnGrouper
StepContextPlanner *--> ModelContextProfileRegistry
StepContextPlanner *--> PromptTokenCounter
StepContextPlanner *--> ReductionStrategyRegistry
StepContextPlanner *--> ReductionCandidateSelector
ReductionStrategyRegistry o--> ContextReductionStrategy
OmitHistoricalGroupStrategy ..|> ContextReductionStrategy
LowestQualityLossSelector ..|> ReductionCandidateSelector
ProviderPromptGuardProcessor *--> PromptTokenCounter

ContextRunState *--> ContextPackage
ContextRunState o--> ContextPlan
ContextPackageBuilder --> ContextPackage
ContextPackage *--> ContextItem
ContextPackage *--> ContextGroup
StepContextPlanner --> ContextPlan
StepContextPlanner --> PromptView

ContextOrchestrator --> ContextSourceRegistry
ContextSourceRegistry o--> ToolResultAdapter
SchemaContextAdapter ..|> ToolResultAdapter
SqlResultContextAdapter ..|> ToolResultAdapter
ContextOrchestrator --> ContextPackageBuilder
ContextOrchestrator --> ContextRunState

note right of ReductionStrategyRegistry
Default registry contains only historical-turn omission.
Additional strategies and selector are injectable.
end note

@enduml
